# ClauseChain

./: .gitignore  ClauseChain_App_Dev_Plan.md  ClauseChain_App_Menu_Expansion_Plan.md  ClauseChain_Champion_Corrected_Route_Tasklist.md  ClauseChain_Championship_GraphRAG_Strategy.md  ClauseChain_Dev_Plan_and_Task_Distribution.md  ClauseChain_Engine_Rerun_Issues.md  ClauseChain_For_Legal_Simple_Guide.md  ClauseChain_Frontend_Plan.md  ClauseChain_Gap_Analysis_4Jul.md  ClauseChain_Legal_Matching_DoDont.md  ClauseChain_PRD_Application.md  ClauseChain_Pitch_Deck.pptx  ClauseChain_Round1_Build_Guide.md  ClauseChain_Round1_Build_Guide_Bangla.md  ClauseChain_Webapp_Sprint_Plan.md  DEMO_RUNBOOK.md  design-qa.md  finding_key_map.json
engine/: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml  run.py
engine/configs/: graph.yaml  models.yaml
engine/data/: known_index.json  known_index_round2.json  seeds.json
engine/docs/: Pillar-6-deep-research-report (1).md  Pillar-7-deep-research-report (1).md
engine/logs/: cost_report.json
engine/reports/: champion_validation.json  graph_validation.json
engine/scripts/: adjudicate_recall.py  apply_decisions.py  approve_rows.py  build_au_corpus.py  build_legal_workbook.py  build_my_corpus.py  build_review_bundle.py  build_sg_corpus.py  champion_validate.py  consolidate_submission.py  eval_vs_master.py  export_legal_review_payload.py  export_review_md.py  export_ui_bundle.py  extract_docling_markdown.py  extract_marker_markdown.py  refute_new.py  rename_pdfs_sequential.py  submission_replay.py  validate_graph.py  (+1 more)
(+98 files in other folders)
