[project]
name = "clausechain-engine"
version = "0.1.0"
description = "ClauseChain Round 1 legal evidence engine skeleton"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "pymupdf>=1.24,<2",
    "paddlepaddle>=3.3.1",
    "paddleocr>=3.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]
crawl = [
    "playwright>=1.45",
]
docling = [
    "docling>=2.50,<3",
]
olmocr = [
    "olmocr>=0.4,<0.5",
]
marker = [
    "marker-pdf>=1.10,<2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
